[package]
name = "lightclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




[dev-dependencies]
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
home = "0.5.4"
clap = { version = "3.2.18", features = ["derive", "env"] }
dirs = "4.0.0"
env_logger = "0.9.0"
ethers = "1.0.0"
log = "0.4.17"
ctrlc = "3.2.3"
futures = "0.3.23"